[gd_scene load_steps=13 format=2]

[ext_resource path="res://components/themes/defaultButtonTheme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/SetLevel/SetLevel.gd" type="Script" id=2]
[ext_resource path="res://components/themes/defaultFont.tres" type="Theme" id=4]
[ext_resource path="res://components/themes/panel.tres" type="Theme" id=5]
[ext_resource path="res://components/themes/TitleFont.tres" type="Theme" id=6]
[ext_resource path="res://sounds/arpeggiosG#.wav" type="AudioStream" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.164706, 0.188235, 0.219608, 1 )

[sub_resource type="Animation" id=2]
length = 2.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.33, 0.55, 0.72, 0.87, 0.91, 0.95, 1 ),
"transitions": PoolRealArray( 1, 0.659754, 1.31951, 0.659754, 1.56917, 1, 1.36604, 1 ),
"update": 0,
"values": [ Vector2( 465, -101 ), Vector2( 465, 80 ), Vector2( 465, 30 ), Vector2( 465, 80 ), Vector2( 465, 71 ), Vector2( 465, 80 ), Vector2( 465, 78 ), Vector2( 465, 80 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Panel/Title:custom_constants/shadow_offset_y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.97, 1.35 ),
"transitions": PoolRealArray( 0.732043, 1.8025 ),
"update": 0,
"values": [ 1, 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Panel/Title:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.97, 1.35 ),
"transitions": PoolRealArray( 0.707107, 1.23114 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -17 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Back/Back:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1 ), Vector2( 0, -6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 164 ), Vector2( 0, 155 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "movFontBack"
tracks/0/type = "value"
tracks/0/path = NodePath("Back/Back:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ), Vector2( 0, -1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 155 ), Vector2( 0, 164 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Back/Back:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1 ), Vector2( 0, -6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 164 ), Vector2( 0, 155 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "movFontBack"
tracks/0/type = "value"
tracks/0/path = NodePath("Back/Back:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ), Vector2( 0, -1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 155 ), Vector2( 0, 164 ) ]
}

[node name="setLevel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.297363
margin_top = 0.297302
margin_right = -0.297363
margin_bottom = 0.297302
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 80.0
margin_right = 200.0
margin_bottom = 183.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel"]
anims/mov = SubResource( 2 )

[node name="Title" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
custom_colors/font_color = Color( 0.211765, 0.419608, 0.478431, 1 )
custom_colors/font_color_shadow = Color( 0.121569, 0.247059, 0.278431, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "Set Level"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -30.0
margin_right = 72.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineOption" type="HBoxContainer" parent="GridContainer"]
margin_right = 144.0
margin_bottom = 60.0

[node name="AnimationBackButtom" type="AnimationPlayer" parent="GridContainer/LineOption"]
pause_mode = 1
anims/movFont = SubResource( 3 )
anims/movFontBack = SubResource( 4 )

[node name="Back" type="Button" parent="GridContainer/LineOption"]
margin_top = 157.25
margin_right = 144.0
margin_bottom = 217.25
mouse_default_cursor_shape = 2
theme = ExtResource( 1 )
text = "Back"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Label" parent="GridContainer/LineOption/Back"]
light_mask = 0
margin_top = -6.0
margin_right = 159.0
margin_bottom = 114.0
theme = ExtResource( 4 )
text = "Back
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GridContainer/LineOption/Back"]
stream = ExtResource( 7 )

[node name="AnimationBackButtom2" type="AnimationPlayer" parent="GridContainer/LineOption"]
pause_mode = 1
anims/movFont = SubResource( 5 )
anims/movFontBack = SubResource( 6 )

[connection signal="pressed" from="GridContainer/LineOption/Back" to="." method="_on_Back_pressed"]
